# snapstream

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-docs.yml  python-publish.yml  python-test.yml  scheduled-tests.yml  test-linux.yml  triggered-tests.yml
docs/: .readthedocs.yaml  Makefile  conf.py  index.rst  modules.rst  requirements.txt  snapstream.rst
docs/source/: .gitignore  cli.rst  conf.py  examples.rst  index.rst  install.rst  intro.rst  kafka.rst  testing.rst
snapstream/: __init__.py  __main__.py  caching.py  codecs.py  core.py  snapstream.py  utils.py
tests/: conftest.py  test__init__.py  test_caching.py  test_codecs.py  test_core.py  test_kafka_integration.py  test_utils.py
tests/integration/: test_kafka_integration.py
