[tool.poetry]
name = "snapstream"
version = "0.0.0.dev0"
description = "Streamline your Kafka data processing, this tool aims to standardize streaming data from multiple Kafka clusters. With a pub-sub approach, multiple functions can easily subscribe to incoming messages, serialization can be specified per topic, and data is automatically processed by data sink functions."
authors = ["Menziess <stefan_schenk@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/Menziess/snapstream"
documentation = "https://snapstream.readthedocs.io"
license = "MIT"
keywords = ["kafka", "pubsub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.scripts]
snapstream = 'snapstream.__main__:main'

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.4.0"
rocksdict = "^0.3.23"
pypubsub = "^4.0.3"
avro = "^1.11.3"
toolz = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
autopep8 = "^2.0.2"
pyright = "^1.1.300"
flake8 = "^7.0.0"
bandit = "^1.7.5"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.10.0"
pre-commit = "^3.2.1"
ipykernel = "^6.22.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-autobuild = "^2024.4.16"
testcontainers = {extras = ["kafka"], version = "^4.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["snapstream"]
venvPath = "."
venv = ".venv"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "snapstream",
    "tests",
]
markers = [
    "serial"
]
